@@ -565,6 +565,7 @@ Grouped in options:\
 [Piqd](https://www.piqd.de) -
 [Rhein-Zeitung](https://www.rhein-zeitung.de) -
 [Schwäbische Zeitung](https://www.schwaebische.de) -
+[Stuttgarter Zeitung](https://www.stuttgarter-zeitung.de) -
 [Westdeutsche Zeitung](https://www.wz.de)
 
 Grouped in options:\
