@@ -576,6 +576,7 @@
     "*://*.stcatharinesstandard.ca/*",
     "*://*.stocknews.com/*",
     "*://*.studocu.com/*",
+    "*://*.stuttgarter-zeitung.de/*",
     "*://*.stylist.co.uk/*",
     "*://*.sudinfo.be/*",
     "*://*.sudouest.fr/*",
@@ -745,5 +746,5 @@
     "*://*.wyleex.com/*",
     "*://webcache.googleusercontent.com/*"
   ],
-  "version": "3.2.3.0"
+  "version": "3.2.3.1"
 }
